client/pages/components/BlurredCircle/BlurredCircle.module.css
.blurredCircle {
	filter: blur(200px);
	height: 50%;
	width: 50%;
	flex-shrink: 0;
	z-index: -1;
	position: absolute;
	animation: scale 6s infinite linear;
}

.blurredCircle:nth-child(2) {
	animation-delay: 2s; /* Delay the animation for the second div */
}

.blurredCircle:nth-child(3) {
	animation-delay: 2s; /* Delay the animation for the third div */
}

.blurredCircle:nth-child(4) {
	animation-delay: 2s; /* Delay the animation for the fourth div */
}

@keyframes scale {
	0% {
		transform: scale(100%) translateX(0%);
	}
	50% {
		transform: scale(150%) translateX(-50%);
	}

	100% {
		transform: scale(100%) translateX(0%);
	}
}

